--- a/logger/templates/index.html
+++ b/logger/templates/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Hello {{user.username}}</h1>
+    {% for t in data.temperatures %}
+        {{t.location}} - {{t.timestamp}} - <strong>{{t.tmp}}</strong><br/>
+    {% endfor %}
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
