--- a/logger/templates/index.html
+++ b/logger/templates/index.html
@@ -25,7 +25,7 @@
                                           Place
                                     </div>
                                     <div class="col-sm-6 head">
-                                          Date and Time
+                                          Date and UTC Time
                                     </div>
                                     <div class="col-sm-3 head">
                                           Temperature
